# Onyx-RS-Bridge

./: ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml  quickstart.sh
config/: .env.example  connector_config.yaml
dashboard/: Dockerfile  next.config.js  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/logs/: route.ts
dashboard/src/app/api/stats/: route.ts
dashboard/src/app/api/sync-status/: route.ts
dashboard/src/components/: ContainerStats.tsx  LogViewer.tsx  SyncProgress.tsx
docker/: .env.example  Dockerfile  check_document_base.py  check_ingestion_schema.py  check_section_schema.py  docker-compose.yml  find_endpoints.py  probe_onyx.py  test_onyx_auth.py
src/repairshopr_connector/: __init__.py  cache.py  cli.py  client.py  connector.py  document_builder.py  models.py  rate_limiter.py  state.py
tests/: __init__.py  conftest.py  test_document_builder.py  test_models.py
