[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-repairshopr-connector"
version = "0.1.0"
description = "Onyx connector for RepairShopr repair shop management system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SilverWulf212" }
]
keywords = ["onyx", "repairshopr", "connector", "ai", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/SilverWulf212/Onyx-RS-Bridge"
Repository = "https://github.com/SilverWulf212/Onyx-RS-Bridge"

[tool.hatch.build.targets.wheel]
packages = ["src/repairshopr_connector"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/repairshopr_connector --cov-report=term-missing"
