[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-repairshopr-connector"
version = "2.0.0"
description = "Production-grade Onyx connector for RepairShopr repair shop management system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SilverWulf212" }
]
keywords = ["onyx", "repairshopr", "connector", "ai", "knowledge-base", "repair-shop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
    "python-dateutil>=2.8.0",
    "structlog>=24.1.0",
    "colorama>=0.4.6",
]

[project.scripts]
rs-onyx = "repairshopr_connector.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/SilverWulf212/Onyx-RS-Bridge"
Repository = "https://github.com/SilverWulf212/Onyx-RS-Bridge"
Documentation = "https://github.com/SilverWulf212/Onyx-RS-Bridge#readme"
Issues = "https://github.com/SilverWulf212/Onyx-RS-Bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/repairshopr_connector"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/repairshopr_connector --cov-report=term-missing"
